# intake-erddap

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  dev-environment.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yaml  test.yaml
ci/: environment-py3.10-win.yml  environment-py3.10.yml  environment-py3.11.yml  environment-py3.8-win.yml  environment-py3.8.yml  environment-py3.9-win.yml  environment-py3.9.yml
docs/: api.rst  conf.py  environment.yml  examples.rst  index.rst  overview.rst  user_guide.rst  whats_new.md
docs/examples/: wave-height.md
docs/notebooks/: Wave Data Demo.ipynb
intake_erddap/: __init__.py  cache.py  erddap.py  erddap_cat.py  utils.py  version.py
tests/: conftest.py  test_cache.py  test_erddap_cat.py  test_erddap_reader.py  test_erddap_source.py  test_intake_erddap.py  test_utils.py  utils.py
tests/test_data/: tabledap_metadata.json
