[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 95
exclude = ["setup.py", "docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.isort]
known_third_party = ["appdirs", "cf_pandas", "dask", "erddapy", "intake", "numpy", "pandas", "pkg_resources", "pytest", "requests", "setuptools", "xarray"]
skip_glob = ["docs/*", "docs/**/*.py"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
# only test the root level, otherwise it picks up the tests of the project template
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "setup.py",
    "intake_erddap/_version.py",
    "intake_erddap/version.py",
    "tests/*",
]
